--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         <!-- Second Row (Menu) -->
         <tr bgcolor="beige" align="center">
-            <td>Home</td>
+            <td><a href="https://abes.org.br/en/">home</a></td>
             <td>Login</td>
             <td>Registration</td>
             <td>Catalogue</td>
@@ -42,6 +42,5 @@
             </td>
         </tr>
     </table>
-
 </body>
 </html>
